--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master"
+    "move": "mkdir docs & rmdir /S /Q docs & rename public docs"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
