--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react": "latest",
+    "prop-types": "latest"
   },
   "keywords": [
     "gatsby"
