--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
-    "react-helmet": "^5.2.0",
+    "gatsby-plugin-typography": "^1.7.18",
+    "prop-types": "latest",
     "react": "latest",
-    "prop-types": "latest"
+    "react-helmet": "^5.2.0",
+    "typography-theme-bootstrap": "latest",
+    "typography": "latest"
   },
   "keywords": [
     "gatsby"
