--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "version": "1.0.0",
   "author": "Adam Saladino <adam@codingsimply.com>",
   "dependencies": {
-    "gatsby": "^1.9.247",
+    "gatsby": "^1.9.250",
     "gatsby-link": "^1.6.40",
+    "gatsby-plugin-glamor": "^1.6.13",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-typography": "^1.7.18",
+    "gatsby-source-filesystem": "^1.5.29",
+    "gatsby-transformer-remark": "^1.7.40",
+    "glamorous": "^4.12.3",
     "prop-types": "latest",
     "react": "latest",
     "react-helmet": "^5.2.0",
+    "typography": "^0.16.6",
     "typography-theme-bootstrap": "latest",
-    "typography": "latest"
+    "typography-theme-kirkham": "^0.16.3"
   },
   "keywords": [
     "gatsby"
@@ -27,6 +32,6 @@
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
-    "prettier": "^1.11.1"
+    "prettier": "^1.12.0"
   }
 }
