--- a/package.json
+++ b/package.json
@@ -3,21 +3,18 @@
   "description": "Coding Simply",
   "version": "1.0.0",
   "author": "Adam Saladino <adam@codingsimply.com>",
+  "repository": "https://github.com/asaladino/asaladino.github.io",
   "dependencies": {
-    "gatsby": "^1.9.250",
+    "gatsby": "^1.9.251",
     "gatsby-link": "^1.6.40",
-    "gatsby-plugin-glamor": "^1.6.13",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-typography": "^1.7.18",
     "gatsby-source-filesystem": "^1.5.29",
     "gatsby-transformer-remark": "^1.7.40",
-    "glamorous": "^4.12.3",
     "prop-types": "latest",
-    "react": "latest",
     "react-helmet": "^5.2.0",
     "typography": "^0.16.6",
-    "typography-theme-bootstrap": "latest",
-    "typography-theme-kirkham": "^0.16.3"
+    "typography-theme-bootstrap": "latest"
   },
   "keywords": [
     "gatsby"
