--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Adam Saladino <adam@codingsimply.com>",
   "repository": "https://github.com/asaladino/asaladino.github.io",
   "dependencies": {
+    "animate-components": "^1.4.8",
     "gatsby": "^1.9.251",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
@@ -14,7 +15,8 @@
     "prop-types": "latest",
     "react-helmet": "^5.2.0",
     "typography": "^0.16.6",
-    "typography-theme-bootstrap": "latest"
+    "typography-theme-bootstrap": "latest",
+    "react": "latest"
   },
   "keywords": [
     "gatsby"
