--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "move": "mkdir docs & rmdir /S /Q docs & rename public docs"
+    "move": "mkdir .docs;rm -r docs;mv public docs"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
