--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "foundation-sites": "^6.4.4-rc1",
     "gatsby": "^1.9.251",
     "gatsby-link": "^1.6.40",
+    "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-typography": "^1.7.18",
     "gatsby-source-filesystem": "^1.5.29",
     "gatsby-transformer-remark": "^1.7.40",
     "prop-types": "latest",
-    "react": "latest"
+    "react": "latest",
+    "react-helmet": "^5.2.0"
   },
   "keywords": [
     "gatsby"
